# chaudio

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  chaudioconfig.h.in  requirements.txt  setup.py  test.py
chaudio/: __init__.py  arrangers.py  track.py  util.py  waves.py
chaudio/arrangers/: __init__.py
chaudio/generators/: __init__.py
chaudio/instruments/: __init__.py  _presets.py
chaudio/io/: __init__.py
chaudio/plugins/: __init__.py  echo.py  fade.py  filters.py  flanger.py  noise.py  pitchshift.py  resolution.py  stretch.py  topcropper.py  volume.py
chaudio/source/: __init__.py
chaudio/util/: __init__.py  chords.py  freq.py  io.py  raw.py
chaudio/visuals/: __init__.py
chaudio/waves/: __init__.py
docs/: .gitignore  CMakeLists.txt  Makefile  api_reference.rst  chaudio.arrangers.rst  chaudio.io.rst  chaudio.plugins.echo.rst  chaudio.plugins.fade.rst  chaudio.plugins.filters.rst  chaudio.plugins.noise.rst  chaudio.plugins.resolution.rst  chaudio.plugins.rst  chaudio.plugins.volume.rst  chaudio.rst  chaudio.source.rst  chaudio.tests.rst  chaudio.tests.test_waveforms.rst  chaudio.texi.in  chaudio.util.rst  chaudio.waves.rst  conf.py  getting_started.rst  index.html  index.rst  installing.rst  make.bat  modules.rst
docs/classes/: chaudio.util.TimeSignature.rst
docs/functions/: chaudio.util.times.rst  chaudio.waves.saw.rst  chaudio.waves.sin.rst  chaudio.waves.square.rst
docs/reference/: util.rst  waves.rst
docs/reference/functions/: chaudio.util.normalize.rst
examples/: CMakeLists.txt  addnoise.py  arrange.py  build_info.c  chplug.c  compose.py  custom_waveform.py  delay_example.c  example.c  example_gain.c  example_plugin.c  example_signal.c  example_write.c  extend.c  genbeat.py  instrument.py  laser_shot.py  output_example.c  pipeline.c  plugin.c  plugin_example.c  profile.c  realtime_pipeline.c  signal.c  simple.py  spectograph.py  write.c
examples/convolver/: CMakeLists.txt  convolver.c
examples/delay/: CMakeLists.txt  delay.c  plugin.c
examples/flanger/: CMakeLists.txt  flanger.c
examples/gain/: CMakeLists.txt  gain.c  plugin.c
examples/signal/: CMakeLists.txt  signal.c
examples/wavin/: CMakeLists.txt  wavin.c
examples/wavout/: CMakeLists.txt  wavout.c
src/: .chaudio.c.swp  .util.h.swp  CMakeLists.txt  arrangers.py  ch_defs.h  ch_plugin.c  ch_plugin.h  ch_signal.c  ch_signal.h  ch_util.c  ch_util.h  chaudio.c  chaudio.h  chaudio.py  chaudiofunctions.h  chaudiogenerator.h  chaudiooutput.h  chaudioplugin.h  chsound.py  dict.c  dict.h  ex_compose.py  ex_drumbeat.py  ex_read.py  ex_simple.py  ex_voiceshift.py  ex_waveform.py  freq.py  generator.c  output.c  paraminterface.c  pipeline.c  plugin.c  plugins.py  read.py  signal.c  simple.py  util.c  util.h  viewer.py  (+1 more)
src/chfft/: CMakeLists.txt  README.md  chfft.c  chfft.h
src/chfft/kissfft/: kiss_fft.h  kiss_fftr.c
src/chplug/: CMakeLists.txt  README.md  ast.c  ast.h  chplug.c  chplug.h  lex.c  lex.h  parser.c  parser.h
src/optional/portaudio/: CMakeLists.txt  input.c  output.c  realtime_process.c
